---
source: figue/src/schema/tests.rs
expression: stripped
---
Error: config field `skipped` is skipped but has no default value
   ╭─[ <unknown>:2:8 ]
   │
 2 │ struct ArgsWithSkippedNonDefaultConfigField {
   │        ──────────────────┬─────────────────  
   │                          ╰─────────────────── defined at figue/src/schema/tests.rs:456
   │                          │                   
   │                          ╰─────────────────── config field `skipped` is skipped but has no default value
   │ 
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
